# Artemis

./: CMakeLists.txt  NNUE.cpp  NNUE.h  NNUE_changelog.md  PUCT.cpp  PUCT.h  README.md  Search.cpp  Search.h  UCI.cpp  changelog.md  includes.h  main.cpp
Chess/: chess.hpp
src/: Eval.hpp  Generation.cpp  Generation.hpp  NN.cpp  NN.hpp  NNUE.cpp  NNUE.hpp  PUCT.cpp  PUCT.hpp  Search.cpp  Search.hpp  UCI.cpp  Writer.hpp  includes.hpp  main.cpp  xorshift.hpp
src/chess/: chess.hpp  mapping.hpp
